<resources>
    <string name="app_name">Budget Manager</string>
    <string name="application_name">Budget Manager</string>
    <string name="add_activity_string">Add activity</string>
    <string name="add_activities_string">Add activities</string>
    <string name="show_activities_string">Show activities</string>
    <string name="show_charts_string">Show charts</string>
    <string name="menu_text">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_text">LogOut</string>
    <string name="description_text">Description</string>
    <string name="enter_description_text">Enter description</string>
    <string name="description_cannot_be_empty_text">Description cannot be empty</string>
    <string name="date_text">Date</string>
    <string name="enter_date_text">Enter date</string>
    <string name="date_cannot_be_empty_text">Date cannot be empty</string>
    <string name="price_text">Price</string>
    <string name="enter_price_text">Enter price</string>
    <string name="price_must_be_positive_text">Price must be positive</string>
    <string name="type_text">Type</string>
    <string name="income_text">Income</string>
    <string name="expense_text">Expense</string>
    <string name="type_details_text">Type Details</string>
    <string name="submit_text">Submit</string>
    <string name="display_options_string">Display options</string>
    <string name="_0_string">0</string>
    <string name="overall_string">Overall:</string>
    <string name="expenses_string">Expenses:</string>
    <string name="incomes_string">Incomes:</string>
    <string name="date_string_temp">Date</string>
    <string name="title_string_temp">Title</string>
    <string name="delete_string">Delete</string>
    <string name="price">Price:</string>
    <string name="type">Type:</string>
    <string name="description">Description:</string>
    <string name="filter_by_date_string">Filter by Date</string>
    <string name="ask_ai_menu_btn_text">Ask Ai</string>
    <string name="ai_description_tv_text">After you click the \'Ask AI\' button, the AI will give you financial recommendations based on your filtered data.</string>
    <string name="ask_ai_btn_string">Ask Ai</string>
    <string-array name="type_expense_array">
        <item>Housing</item>
        <item>Utilities</item>
        <item>Groceries</item>
        <item>Transport</item>
        <item>Other</item>
    </string-array>
    <string-array name="type_income_array">
        <item>Salary</item>
        <item>Bonuses</item>
        <item>Interest</item>
        <item>Dividends</item>
        <item>Other</item>
    </string-array>
    <string-array name="sort_options">
        <item>Don\'t sort</item>
        <item>Sort by price low to high</item>
        <item>Sort by price high to low</item>
        <item>Sort by date low to high</item>
        <item>Sort by date high to low</item>
        <item>Sort by description low to high</item>
        <item>Sort by description high to low</item>
    </string-array>
</resources>