<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddActivity">

    <FrameLayout
        android:id="@+id/menu_FRAME_nav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_high"
        android:background="@color/application_icon_blue"/>

    <LinearLayout
        android:layout_below="@+id/menu_FRAME_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/add_one_form_margin_top"
        android:padding="@dimen/padding_form_add_one"
        android:background="?android:attr/windowBackground">

        <!-- Description input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            android:textSize="@dimen/text_view_input_size_text_form"
            android:paddingTop="@dimen/text_view_input_form_padding_top" />

        <EditText
            android:id="@+id/ADDONE_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description_text"
            android:inputType="text"
            android:padding="@dimen/input_form_padding"
            android:background="@drawable/edit_text_background" />

        <TextView
            android:id="@+id/ADDONE_tv_description_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_cannot_be_empty_text"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <!-- Date input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:textSize="@dimen/text_view_input_size_text_form"
            android:paddingTop="@dimen/text_view_input_form_padding_top" />

        <EditText
            android:id="@+id/ADDONE_et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_date_text"
            android:focusable="false"
            android:clickable="true"
            android:padding="@dimen/input_form_padding"
            android:background="@drawable/edit_text_background" />

        <TextView
            android:id="@+id/ADDONE_tv_date_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_cannot_be_empty_text"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <!-- Price input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_text"
            android:textSize="@dimen/text_view_input_size_text_form"
            android:paddingTop="@dimen/text_view_input_form_padding_top" />

        <EditText
            android:id="@+id/ADDONE_et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_price_text"
            android:inputType="numberDecimal"
            android:padding="@dimen/input_form_padding"
            android:background="@drawable/edit_text_background" />

        <TextView
            android:id="@+id/ADDONE_tv_price_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_must_be_positive_text"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <!-- Type selection (Income or Expense) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_text"
            android:textSize="@dimen/text_view_input_size_text_form"
            android:paddingTop="@dimen/text_view_input_form_padding_top" />

        <RadioGroup
            android:id="@+id/ADDONE_rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/input_form_padding">

            <RadioButton
                android:id="@+id/ADDONE_rb_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_text" />

            <RadioButton
                android:id="@+id/ADDONE_rb_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_text" />
        </RadioGroup>

        <!-- Type of income or type of expense selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_details_text"
            android:textSize="@dimen/text_view_input_size_text_form"
            android:paddingTop="@dimen/text_view_input_form_padding_top" />

        <Spinner
            android:id="@+id/ADDONE_spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/input_form_padding"
            android:background="@drawable/spinner_background" />

        <!-- Submit button -->
        <Button
            android:id="@+id/ADDONE_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_text"
            android:textAllCaps="false"
            android:backgroundTint="@color/application_icon_blue"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/submit_btn_form_margin_top_ADDONE" />


    </LinearLayout>


</RelativeLayout>