<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MenuActivity"
    android:background="@drawable/background_menu">




    <FrameLayout
        android:id="@+id/menu_FRAME_nav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_high"
        android:background="@color/application_icon_blue"/>


    <!--menu buttons part-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/menu_BTN_add_activity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/add_activity_string"
            android:backgroundTint="@color/application_icon_blue"
            android:textSize="@dimen/menu_BTNS_text_size"
            android:layout_margin="@dimen/menu_buttons_margin"
            />



        <Button
            android:id="@+id/menu_BTN_show_activities"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/show_activities_string"
            android:backgroundTint="@color/application_icon_blue"
            android:textSize="@dimen/menu_BTNS_text_size"
            android:layout_margin="@dimen/menu_buttons_margin" />
        <Button
            android:id="@+id/menu_BTN_show_charts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/show_charts_string"
            android:backgroundTint="@color/application_icon_blue"
            android:textSize="@dimen/menu_BTNS_text_size"
            android:layout_margin="@dimen/menu_buttons_margin" />

        <Button
            android:id="@+id/menu_BTN_ai"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ask_ai_menu_btn_text"
            android:backgroundTint="@color/application_icon_blue"
            android:textSize="@dimen/menu_BTNS_text_size"
            android:layout_margin="@dimen/menu_buttons_margin" />
    </LinearLayout>


</RelativeLayout>